new branch dev-2.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,4 @@
-# Add any directories, files, or patterns you don't want to be tracked by version control
-*.vcxproj
-*.vcxproj.filters
-*.stamp
-*.stamp.depend
-*.log
-*.tlog
-*.obj
-*.exe
-*.ilk
-*.pdb
-*.suo
-*.db
-*.ipch
-*.bin
-*.rule
-*.dll
-*.exp
-*.lib
-*.user
-*.sln
 .vs
 .vscode
-*.html
-.idea/
-*.pyc
-*.aps
-*.mesh
-*.idb
-*.lastbuildstate
-
 # engine generated directories
-bin
-obj
-game/logs
-engine/include/Graphyte/Build.Version.hxx
-Makefile
-*.make
-*.mk
-*.dmp
-*.a
-*.a.recipe
-*.so
-*.so.recipe
+out/
