new: typeviewer with new model, based on sqlite and pdb importer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,5 @@ find_package(Qt6 COMPONENTS Widgets REQUIRED)
 
 qt_standard_project_setup()
 
-add_subdirectory(source)
+add_subdirectory("source")
+add_subdirectory("thirdparty")
