--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,3 +1,8 @@
 add_subdirectory(app)
 add_subdirectory(console-app)
 add_subdirectory(lib)
+
+add_subdirectory("typeviewer_app")
+add_subdirectory("typeviewer_engine")
+add_subdirectory("typeviewer_format_dwarf")
+add_subdirectory("typeviewer_format_pdb")
